@@ -20,6 +20,7 @@ FIX Headline and Tags toggles always closed in article edition #382 (sudwebdesig
 FIX Fix medias administration zoombox and javascript optimisations #387 (bazooka07)
 FIX Error when adding or modifying a user #393 (P3ter)
 FIX Default theme : double underline on footer menu #393 (P3ter)
+FIX Comments list sorting #419 (P3ter)
 
 ## PLUXML 5.8.2 (2020/02/09) ##
 [+] #371 Check PluXml update using javascript if "curl" or "file_get_contents" can not be used (bazooka07)
